feat: nginx and safe

--- a/7-ops/其他-4.前端必备nginx.md
+++ b/7-ops/其他-4.前端必备nginx.md
@@ -127,6 +127,17 @@ location ~* ^/api/ {
 }
 ```
 
+**location 优先级**
+
+| 匹配规则 | 含义                   | 示例                     | 优先级（1最高） |
+| -------- | ---------------------- | ------------------------ | --------------- |
+| =        | 精确匹配               | location = /pic/         | 1               |
+| ^~       | 匹配到即停止搜索       | location ^~ /pic/        | 2               |
+| ~        | 正则匹配，区分大小写   | location ~ \.(Jpg\|gif)# | 3               |
+| ~*       | 正则匹配，不区分大小写 | location ~ \.(Jpg\|gif)$ | 4               |
+| 无符号   |                        | location /               | 5               |
+| @        | 内部跳转               | location @errorpage      |                 |
+
 #### 四层反向代理
 
 Nginx 有 Stream 模块，这个模块就是做四层代理的，也就是 TCP、UDP 的代理与负载均衡
@@ -378,7 +389,13 @@ gzip 的核心是 Deflate，在 [RFC 1951](https://link.zhihu.com/?target=https%
 
   核心思路是通过构造 Huffman Tree 方式给字符重新编码，以保证出现频率最高的字符占用的字节越少
 
-浏览器在请求资源的时候在 header 里面带上 `accept-encoding: gzip` 的参数。Nginx 在接收 Header 之后，发现如果有这个配置，则发送 gzip 之后的文件，如果没有则发送源文件。浏览器根据 response header 来处理要不要针对返回的文件进行解压缩然后展示
+gzip工作原理：
+
+1. 浏览器请求 url，并在 request header 中设置属性 `Accept-Encoding: gzip`。表明浏览器支持 gzip
+2. 服务器收到浏览器发送的请求之后，判断浏览器是否支持 gzip，如果支持 gzip，则向浏览器传送压缩过的内容，不支持则向浏览器发送未经压缩的内容。一般情况下，浏览器和服务器都支持 gzip，response headers 返回包含 `Content-Encoding: gzip`
+3. 浏览器接收到服务器的响应之后判断内容是否被压缩，如果被压缩则解压缩显示页面内容
+
+![image-20240312144433773](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240312144433773.png)
 
 **Brotli**
 
