--- a/3-base/51.进程线程互斥.md
+++ b/3-base/51.进程线程互斥.md
@@ -813,7 +813,7 @@ void signal (semaphore S){
 
 缓冲区是临界资源，各进程必须**互斥地访问**
 
-![image-20240401151247445](C:\Users\suncu\AppData\Roaming\Typora\typora-user-images\image-20240401151247445.png)
+![image-20240401151247445](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240401151247445.png)
 
 **多生产者——多消费者问题**
 
