feat: 红黑树和事件循环

--- a/3-base/26-哈希表.md
+++ b/3-base/26-哈希表.md
@@ -299,7 +299,7 @@ function hashFunc(key: string, max: number): number {
 
    - HashMap 计算 hash 对 key 的 hashcode 进行了二次 hash（取哈希值并高位向右移进行异或运算），然后与数组长度取模
 
-     HashMap 效率虽然提高了，但是 hash 冲突也增加了，因为它得出的 hash 的低位相同的概率比较高，而计算位运算解决这个问题，HashMap 重新根据 hashcode 计算 has 值后，又对 hash 做了一些运算来打散数据，使得取得的位置更加分散，从而减少 hash 冲突
+     HashMap 效率虽然提高了，但是 hash 冲突也增加了，因为它得出的 hash 的低位相同的概率比较高，而计算位运算解决这个问题，HashMap 重新根据 hashcode 计算 hash 值后，又对 hash 做了一些运算来打散数据，使得取得的位置更加分散，从而减少 hash 冲突
 
    ![image-20230828154110845](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828154110845.png)
 
