--- a/3-base/35.排序算法.md
+++ b/3-base/35.排序算法.md
@@ -26,8 +26,6 @@
 - 容易出错
 - 数据量非常庞大时，很难进行排序（比如有 10w 的数据量）
 
-
-
 计算机来排序:
 
 - 计算机有些笨拙，它只能执行指令，所以没办法一眼扫过去
@@ -157,21 +155,21 @@ function bubbleSort(arr: number[]): number[] {
 - 即待排序的序列已经是有序的
 - 此时仅需遍历一遍序列，不需要进行交换操作
 
-最坏情况：O(n^2)
+最坏情况：O(n^2^)
 
 - 即待排序的序列是逆序的
 - 需要进行n-1轮排序，每一轮中需要进行n-i-1次比较和交换操作
 
-平均情况：O(n^2)
+平均情况：O(n^2^)
 
 - 即待排序的序列是随机排列的
 - 每一对元素的比较和交换都有1/2的概率发生，因此需要进行n-1轮排序，每一轮中需要进行n-1-1次比较和交换操作
 
-由此可见，冒泡排序的时间复杂度主要取决于数据的初始顺序，最坏情况下时间复杂度是 O(n^2)，不适用于大规模数据的排序
+由此可见，冒泡排序的时间复杂度主要取决于数据的初始顺序，最坏情况下时间复杂度是 O(n^2^)，不适用于大规模数据的排序
 
 总结：
 
-- 冒泡排序适用于数据规模较小的情况，因为它的时间复杂度为 O(n^2)，对于大数据量的排序会变得很慢
+- 冒泡排序适用于数据规模较小的情况，因为它的时间复杂度为 O(n^2^)，对于大数据量的排序会变得很慢
 - 同时，它的实现简单，代码实现也容易理解，适用于学习排序算法的初学者
 - 但是，在实际的应用中，冒泡排序并不常用，因为它的效率较低
 - 因此，在实际应用中，冒泡排序通常被更高效的排序算法代替，如快速排序、归并排序等
@@ -256,23 +254,23 @@ function selectionSort(arr: number[]): number[] {
 
 选择排序的时间复杂度是比较容易分析的
 
-最好情况时间复杂度：O(n^2)
+最好情况时间复杂度：O(n^2^)
 
 - 最好情况是指待排序的数组本身就是有序的
 - 在这种情况下，内层循环每次都需要比较n-1次，因此比较次数为n(n-1)/2，交换次数为0
-- 所以，选择排序的时间复杂度为 O(n^2)
+- 所以，选择排序的时间复杂度为 O(n^2^)
 
-最坏情况时间复杂度：O(n^2)
+最坏情况时间复杂度：O(n^2^)
 
 - 最坏情况是指待排序的数组是倒序排列的
 - 在这种情况下，每次内层循环都需要比较n-i-1次，因此比较次数为n(n-1)/2，交换次数也为n(n-1)/2
-- 所以，选择排序的时间复杂度为 O(n^2)
+- 所以，选择排序的时间复杂度为 O(n^2^)
 
-平均情况时间复杂度：O(n^2)
+平均情况时间复杂度：O(n^2^)
 
 - 平均情况是指待排序的数组是随机排列的
 - 在这种情况下，每个元素在内层循环中的位置是等率的，因此比较次数和交换次数的期望值都是n(n-1)/4
-- 所以，选择排序的时间复杂度为 O(n^2)
+- 所以，选择排序的时间复杂度为 O(n^2^)
 
 总结：
 
@@ -339,16 +337,16 @@ function insertionSort(arr: number[]): number[] {
 - 那么每个元素只需要比较一次就可以确定它的位置，因此比较的次数为n-1，移动的次数为0
 - 所以最好情况下，插入排序的时间复杂度为线性级别，即 O(n)
 
-最坏情况：O(n^2)
+最坏情况：O(n^2^)
 
 - 如果待排序数组是倒序排列的
 - 那么每个元素都需要比较和移动i次，其中i是元素在数组中的位置
 - 因此比较的次数为 n(n-1)/2，移动的次数也为 n(n-1)/2
-- 所以最坏情况下，插入排序的时间复杂度为平方级别，即 O(n^2)
+- 所以最坏情况下，插入排序的时间复杂度为平方级别，即 O(n^2^)
 
 平均情况:
 
-- 对于一个随机排列的数组，插入排序的时间复杂度也为平方级别，即 O(n^2)
+- 对于一个随机排列的数组，插入排序的时间复杂度也为平方级别，即 O(n^2^)
 
 总而言之，如果数组部分有序，插入排序可以比冒泡排序和选择排序更快
 
@@ -357,9 +355,9 @@ function insertionSort(arr: number[]): number[] {
 总结：
 
 - 插入排序是一种简单直观的排序算法，它的基本思想就是将待排序数组分为排序部分和未排序部分，然后将未排序部分的每个元素插入到已排序部分的合适位置
-- 插入排序的时间复杂度为 O(n^2)，虽然这个复杂度比较高，但是插入排序的实现非常简单，而且在某些情况下性能表现也很好
+- 插入排序的时间复杂度为 O(n^2^)，虽然这个复杂度比较高，但是插入排序的实现非常简单，而且在某些情况下性能表现也很好
   - 比如，如果待排序数组的大部分元素已经排好序，那么插入排序的性能就会比较优秀
-- 总之，插入排序虽然没有快速排序和归并排序等高级排序算法的复杂性和高效性，但是它的实现非常简单，而且在一些特定的场景下表现也很好。
+- 总之，插入排序虽然没有快速排序和归并排序等高级排序算法的复杂性和高效性，但是它的实现非常简单，而且在一些特定的场景下表现也很好
 
 ## 归并排序
 
@@ -380,7 +378,7 @@ function insertionSort(arr: number[]): number[] {
 
 - 在实现中，我们可以**使用"分治法"来完成这个过程，即将大问题分解成小问题**来解决
 
-归并排序的算法复杂度为 O(nlogn)，是一种比较高效的排序算法，因此在实际应用中被广泛使用
+归并排序的算法复杂度为 O(nlogN)，是一种比较高效的排序算法，因此在实际应用中被广泛使用
 
 虽然归并排序看起来比较复杂，但是只要理解了基本思路，实现起来并不困难，而且它还是一个非常有趣的算法
 
@@ -445,29 +443,29 @@ function mergeSort(arr: number[]): number[] {
 
 复杂度的分析过程:
 
-- 假设数组长度为 n，需要进行 logn 次归并操作
+- 假设数组长度为 n，需要进行 logN 次归并操作
 - 每次归并操作需要 O(n) 的时间复杂度
-- 因此，归并排序的时间复杂度为 O(nlogn)
+- 因此，归并排序的时间复杂度为 O(nlogN)
 
-最好情况：O(logn)
+最好情况：O(logN)
 
 - 最好情况下，待排序数组已经是有序的了，那么每个子数组都只需要合并一次，即只需要进行一次归并操作
-- 因此，此时的时间复杂度是 O(logn)
+- 因此，此时的时间复杂度是 O(logN)
 
-最坏情况：O(nlogn)
+最坏情况：O(nlogN)
 
 - 最坏情况下，待排序数组是逆序的，那么每个子数组都需要进行多次合并
-- 因此，此时的时间复杂度为 O(nlogn)
+- 因此，此时的时间复杂度为 O(nlogN)
 
-平均情况：O(nlogn)
+平均情况：O(nlogN)
 
 - 在平均情况下，我们假设待排序数组中任意两个元素都是等概率出现的
-- 此时，可以证明归并排序的时间复杂度为 O(nlogn)
+- 此时，可以证明归并排序的时间复杂度为 O(nlogN)
 
 总结：
 
 - 归并排序是一种非常高效的排序算法，它的核心思想是分治，即将待排序数组分成若干个子数组，分别对这些子数组进行排序最后将排好序的子数组合并成一个有序数组
-- 归并排序的时间复杂度为 O(nlogn)，并且在最好、最坏和平均情况下都可以达到这个时间复杂度
+- 归并排序的时间复杂度为 O(nlogN)，并且在最好、最坏和平均情况下都可以达到这个时间复杂度
 - 虽然归并排序看起来比较复杂，但是只要理解了基本思路，实现起来并不困难，而且它是一种非常高效的排序算法
 
 ## 快速排序
@@ -496,7 +494,7 @@ TimSort
 
 快速排序是一种原地排序算法，不需要额外的数组空间
 
-- 同时，**快速排序的时间复杂度是 O(nlogn)**，在**最坏情况下是 O(n^2)**
+- 同时，**快速排序的时间复杂度是 O(nlogN)**，在最坏情况下是 O(n^2^)
 - 但是**这种情况出现的概率非常小，因此快速排序通常被认为是一种非常高效的排序算法**
 
 ![image-20240428151152481](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240428151152481.png)
@@ -555,21 +553,21 @@ function quickSort(arr: number[]): number[] {
 
 快速排序的时间复杂度主要取决于基准元素的选择、数组的划分、递归深度等因素
 
-最好情况：O(nlogn)
+最好情况：O(nlogN)
 
-- 当每次划分后，两部分的大小都相等，即基准元素恰好位于数组的中间位置，此时递归的深度为 O(logn)
-- 每一层需要进行 n 次比较，因此最好情况下的时间复杂度为 O(nlogn)
+- 当每次划分后，两部分的大小都相等，即基准元素恰好位于数组的中间位置，此时递归的深度为 O(logN)
+- 每一层需要进行 n 次比较，因此最好情况下的时间复杂度为 O(nlogN)
 
-最坏情况：O(n^2)
+最坏情况：O(n^2^)
 
 - 当每次划分后，其中一部分为空，即基准元素是数组中的最大或最小值，此时递归的深度为 O(n)
-- 每一层需要进行 n 次比较，因此最坏情况下的时间复杂度为 O(n^2)
+- 每一层需要进行 n 次比较，因此最坏情况下的时间复杂度为 O(n^2^)
 - 需要注意的是，采用三数取中法或随机选择基准元素可以有效避免最坏情况的发生
 
-平均情况：O(nlogn)
+平均情况：O(nlogN)
 
-- 在平均情况下，每次划分后，两部分的大小大致相等，此时递归的深度为 O(logn)
-- 每一层需要进行大约 n 次比较，因此平均情况下的时间复杂度为 O(nlogn)
+- 在平均情况下，每次划分后，两部分的大小大致相等，此时递归的深度为 O(logN)
+- 每一层需要进行大约 n 次比较，因此平均情况下的时间复杂度为 O(nlogN)
 
 需要注意的是，快速排序是一个原地排序算法，不需要额外的数组空间
 
@@ -577,5 +575,5 @@ function quickSort(arr: number[]): number[] {
 
 快速排序的性能优于许多其他排序算法，因为它具有良好的局部性和使用原地排序的优点。
 
-- 它在大多数情况下的时间复杂度为 O(nlogn)，但在最坏情况下会退化到 O(n^2)
+- 它在大多数情况下的时间复杂度为 O(nlogN)，但在最坏情况下会退化到 O(n^2^)
 - 为了避免最坏情况的发生，可以使用一些优化策略，比如随机选择基准元素和三数取中法
