--- a/7-ops/虚拟-1.Docker使用.md
+++ b/7-ops/虚拟-1.Docker使用.md
@@ -126,7 +126,7 @@ $ docker pull nginx
 $ docker pull redis:6.2.4
 ```
 
-删除镜像
+#### 删除镜像
 
 - rmi 用于删除镜像
 - rm 用于移除容器
@@ -139,6 +139,12 @@ nginx        latest    605c77e624dd   2 years ago   141MB
 redis        6.2.4     9dae5b22eb39   2 years ago   105MB
 # 删除镜像
 $ docker rmi 9dae5b22eb39
+```
+
+#### 查看容器版本
+
+```bash
+$ docker image inspect redis:latest | grep -i version
 ```
 
 ### 启动容器
@@ -183,7 +189,7 @@ $ docker stop mynginx
 $ docker start 545
 ```
 
-### 修改容器内容
+### 进入容器修改容器内容
 
 修改默认的 index.html 页面
 
@@ -264,7 +270,7 @@ $ docker logout
 $ docker push
 ```
 
-查看日志
+#### 查看日志
 
 ```bash
 $ docker logs 545cfdb127a9
