--- a/10-other/41.上海吃吃吃.md
+++ b/10-other/41.上海吃吃吃.md
@@ -1,8 +1,10 @@
+# 上海吃吃吃
+
 ## 冰激凌
 
 ### Azabuya 麻布屋(乌鲁木齐中路店)
 
-- 日本柚子、抹茶5号我觉得不错，我很喜欢那柚子酸味和抹茶那苦味
+- 日本柚子、抹茶 5 号我觉得不错，我很喜欢那柚子酸味和抹茶那苦味
 
 ![73e26457d91c66fdfd3fc2267afdcda](https://gitee.com/lilyn/pic/raw/master/eat-img/73e26457d91c66fdfd3fc2267afdcda.jpg)
 
@@ -22,7 +24,7 @@
 
 ![c82ef748cbb21861959d960dced5182](https://gitee.com/lilyn/pic/raw/master/eat-img/c82ef748cbb21861959d960dced5182.jpg)
 
-### % Arabica阿拉比卡咖啡(新天地时尚I店)
+### % Arabica 阿拉比卡咖啡(新天地时尚 I 店)
 
 ![2b656bf997b67a56076b85c405c1396](https://gitee.com/lilyn/pic/raw/master/eat-img/2b656bf997b67a56076b85c405c1396.jpg)
 
@@ -30,7 +32,7 @@
 
 周末睡大懒觉就可以考虑 Brunch（早午餐） = breakfast（早餐） + lunch（午餐），我觉得有点类似广式早茶，当然我也顺道在上海体验了一下广式草茶
 
-### O'mills Sourdough Bakery&Bistro(永嘉路店) 
+### O'mills Sourdough Bakery&Bistro(永嘉路店)
 
 - 水牛芝士玛格丽特披萨，拼牛油果
 
@@ -56,7 +58,7 @@
 
 本帮菜以浓油赤酱、咸淡适中、醇厚鲜美著称
 
-### 蘭心·臻品(瑞虹太阳宫店) 
+### 蘭心·臻品(瑞虹太阳宫店)
 
 响油鳝丝
 
@@ -102,11 +104,11 @@
 
 ## 粤菜
 
-### 宝粤楼广式点心茶楼(世博源店) 
+### 宝粤楼广式点心茶楼(世博源店)
 
 茶水
 
-- 想体验早茶，来了这儿，这的茶水7元一位无限畅饮，我点的是普洱
+- 想体验早茶，来了这儿，这的茶水 7 元一位无限畅饮，我点的是普洱
 
 ![9c74fc1190ef10a636519c40bf83fcb](https://gitee.com/lilyn/pic/raw/master/eat-img/9c74fc1190ef10a636519c40bf83fcb.jpg)
 
@@ -126,19 +128,15 @@
 
 ![a5efe2fcf9c0c6f4d1ba2270b0ea5bf](https://gitee.com/lilyn/pic/raw/master/eat-img/a5efe2fcf9c0c6f4d1ba2270b0ea5bf.jpg)
 
-
-
 ## 苏帮菜
 
-### 苏小柳手工点心(人民广场分院) 
+### 苏小柳手工点心(人民广场分院)
 
 手拆蟹粉满汁灌汤包
 
 - 汁水很饱满
 
 ![6af88d24756eec5c41b89f9edd341fb](https://gitee.com/lilyn/pic/raw/master/eat-img/6af88d24756eec5c41b89f9edd341fb.jpg)
-
-
 
 ## 面包
 
@@ -170,7 +168,7 @@
 
 ### 国际饭店蝴蝶酥（人民广场）
 
-排队太狠了，3个小时。不过确实很好吃，在那有黄牛，等不起的话也可以去黄牛那里买。其实有些商超里也有卖这个的，也不用排队，怎么说呢，从众心里深深入我心
+排队太狠了，3 个小时。不过确实很好吃，在那有黄牛，等不起的话也可以去黄牛那里买。其实有些商超里也有卖这个的，也不用排队，怎么说呢，从众心里深深入我心
 
 ![607e33c98a568f6a262ca87cc871229](https://gitee.com/lilyn/pic/raw/master/eat-img/607e33c98a568f6a262ca87cc871229.jpg)
 
