feat: 服务器之间免密登陆

--- a/7-ops/云服务器-1.免密登陆.md
+++ b/7-ops/云服务器-1.免密登陆.md
@@ -49,6 +49,12 @@ $ ssh xx.xx.xx.xx
    $ ssh lyn
    ```
 
+4. 如果是服务器与服务器之间进行免密登陆，可以使用如下命令
+
+   ```bash
+   $ ssh-copy-id root@xx.xx.xx.xx
+   ```
+
 ## 免密登陆条件
 
 1. 两个文件：本地环境的 `~/.ssh/id_rsa.pub` 与远程服务器的 `~/.ssh/authorized_keys`
