--- a/7-ops/其他-10.OpenVPN.md
+++ b/7-ops/其他-10.OpenVPN.md
@@ -146,8 +146,54 @@ VPN 技术的基本原理其实就是用的隧道技术，就类似于火车/地
 
 说明：属于C/S架构的软件，需要单独安装 openvpn 客户端与服务端
 
-openvpn 工作原理，需要知道每一步都在做什么
+### 工作原理
 
-- 需要先关注数据安全传输的三要素：数据机密性、数据完整性、身份认证
-- 需要掌握密钥技术应用实现
-- 需要掌握证书概念的企业应用
+SSL VPN双向认证（Mutual SSL/TLS Authentication）是一种严格的身份验证机制，要求**客户端和服务器双方均提供并验证对方的数字证书**，确保通信双方身份均合法
+
+- 单向认证：仅服务器向客户端提供证书（常见于 HTTPS 网站）
+- 双向认证：客户端和服务器均需提供证书，并验证对方证书的合法性（如有效期、签发者、吊销状态等）
+
+openvpn 需要有如下文件：
+
+- ca.crt（证书颁发机构）
+- ca.key（证书私钥文件）
+- server.key（服务端私钥文件）
+- server.crt（服务端证书文件）
+- client.key（客户端私钥文件）
+- client.crt（客户端证书文件）
+
+证书生成与配置：
+
+- 服务器端：导入客户端证书的根CA证书
+- 客户端：导入服务器证书的根CA证书
+
+认证交互阶段（SSL/TLS握手）：
+
+1. Client Hello -> Server Hello
+
+   客户端发起连接，声明支持的 TLS 版本、密码套件
+
+2. 服务器发送自身证书链到客户端
+
+   客户端验证该证书是否由可信CA签发，检查证书是否过期、域名/IP是否匹配
+
+3. 客户端发送自身证书链
+
+   服务器验证该证书是否由可信CA签发，检查用户标识是否在可授权列表，若启动硬件绑定检查MD5值
+
+4. 密钥交换与会话建立
+
+   客户端生成预主密钥，用服务器公钥加密后发送
+
+   双方基于预主密钥生成会话密钥，用户后序数据加密
+
+## 虚拟专用网络部署
+
+### 架构
+
+| 主机名称  | 地址规划（外网）  | 地址规划（内网） | 系统环境  |
+| --------- | ----------------- | ---------------- | --------- |
+| vpnserver | 192.168.30.101/24 | 172.16.30.101/24 | centos7.9 |
+| vpnclient | 192.168.30.1/24   |                  | window10  |
+| webserver | N/A               | 172.16.30.102/24 | centos7.9 |
+
