--- a/10-other/三国冰河时代玩法.md
+++ b/10-other/三国冰河时代玩法.md
@@ -7,6 +7,6 @@
 3. 6队列：4个赛季了，零氪玩家如果每天都签到且去同盟商店买爵位经验，无需花费元宝现在也爵位6了，多一个队列抢占概率就高一点，如果没有也不强求没必要浪费元宝升级，玩的开心最重要
 4. 加速：红人阁有不少人在空城的情况下也使用加速，豪无人道，攻占的速度明显比我快很多。但是这个不适用于咱们盟，咱们盟大多数都是零氪微氪玩家，让其一个队列至少花500元宝去加速，我觉得是不太合适的。但是大佬玩家请不要吝啬，关键战开启您的加速，去加速一次回来加速一次，单个队列下来1000元宝。但是如果大佬在3环开外使用加速花费就很大，所以一定要把1环2个给最舍得用加速的人。不开加速的情况下，4环5环也就打一个来回 5-6滴血，2环不开加速可以打两个以上来回12-14滴血，如果使用加速，可以打20滴以上，1环能打的更多（手速也一定要快，要不然在1环2环可能也打不出来效果）4环5环使用加速会很浪费，且最多也只能打2个来回 10-12滴血（这个结论是在建立在和傲视抢3级城的基础上）。使用加速的话抢占概率会提升一点
 5. 网络：抢占一般一分钟就结束了，这时候尽量保障网络是通畅的，切忌从流量切换到WIFI（比如正在回家的路上），切换网络是会有个网络异常问题导致无法攻城（这个小程序重连机制有很多Bug），这时候只能退出游戏重新登陆，那时候城可能就被攻占下来了
-6. 即使上面都做的很完美了，其实能抢下首占的概率还是不高，跟紫烟阁抢一级城失败那次就已经证明了咱们出勤率上就是偏低的。那有没有什么办法能让一些人没时间玩的人保障出勤率呢？这个是建立在牺牲某些人的前提上，且只需要关键战这样。因为这游戏是小程序，可以登录的方式就多种多样了，支付宝版本可以网页扫码登录（登录多个账号，开无痕模式开启多个Tab页即可），微信版本可以使用模拟器登录（无需登录微信），如果操作速度可以的话，可以一个人玩两个号，经我测试1环2环攻城期间玩两个号基本上不会有冲突（前提不使用加速），如果在4环5环可以玩更多。这样即使大佬忙无法在线也可以让小弟们顶上（红人关键战大佬有事的话就会找人帮忙顶上）。帮玩的前提是建立在信任关系的基础上
+6. 即使上面都做的很完美了，其实能抢下首占的概率还是不高，跟紫烟阁抢一级城失败那次就已经证明了咱们出勤率上就是偏低的。那有没有什么办法能让一些人没时间玩的人保障出勤率呢？这个是建立在牺牲某些人的前提上，且只需要关键战这样。因为这游戏是小程序，可以登录的方式就多种多样了，支付宝版本可以网页扫码登录（登录多个账号，开无痕模式开启多个Tab页即可），微信版本可以使用模拟器登录（无需登录微信），如果操作速度可以的话，可以一个人玩两个号，经我测试1环2环攻城期间玩两个号基本上不会有冲突（前提不使用加速），如果在4环5环可以玩更多。这样即使大佬忙无法在线也可以让小弟们顶上（红人关键战大佬有事的话就会找人帮忙顶上）。帮玩的前提是建立在信任关系的基础上，红人每天晚上在全民K歌上面一起嗨（里面已有52人），会加速建立彼此信任关系，所以即使有人退游也会时不时出来冒泡聊天，关键战帮玩一下
 
 乘物以游心，胜负得失皆外物，唯内心愉悦永恒~
