docs: 完善神兵和玉石玩法

--- a/10-other/三国冰河时代玩法.md
+++ b/10-other/三国冰河时代玩法.md
@@ -10,3 +10,38 @@
 6. 即使上面都做的很完美了，其实能抢下首占的概率还是不高，跟紫烟阁抢一级城失败那次就已经证明了咱们出勤率上就是偏低的。那有没有什么办法能让一些人没时间玩的人保障出勤率呢？这个是建立在牺牲某些人的前提上，且只需要关键战这样。因为这游戏是小程序，可以登录的方式就多种多样了，支付宝版本可以网页扫码登录（登录多个账号，开无痕模式开启多个Tab页即可），微信版本可以使用模拟器登录（无需登录微信），如果操作速度可以的话，可以一个人玩两个号，经我测试1环2环攻城期间玩两个号基本上不会有冲突（前提不使用加速），如果在4环5环可以玩更多。这样即使大佬忙无法在线也可以让小弟们顶上（红人关键战大佬有事的话就会找人帮忙顶上）。帮玩的前提是建立在信任关系的基础上，红人每天晚上在全民K歌上面一起嗨（里面已有52人），会加速建立彼此信任关系，所以即使有人退游也会时不时出来冒泡聊天，**关键战帮玩**一下
 
 乘物以游心，胜负得失皆外物，唯内心愉悦永恒~
+
+
+
+## 神兵玉石
+
+### 车头
+
+1. **神兵加点**
+
+   **步兵 > 弓兵 > 骑兵**
+
+   步兵神兵需比弓兵高5阶（如步兵紫10阶，弓兵紫5阶）
+
+2. **玉石加点**
+
+   **步兵 > 弓兵 > 骑兵**
+
+   - 紫色12阶前：步兵玉石比弓兵高5阶（如步紫5阶，弓蓝5阶）
+   - 紫色12阶后：步兵比弓兵高2-3阶即可，骑兵始终低于弓兵5阶
+
+### 车身
+
+1. **神兵加点**
+
+   **弓兵 > 步兵 > 骑兵**
+
+   - 弓兵神兵需比步兵高5阶（如弓兵紫10阶，步兵紫5阶）
+   - 骑兵在S3赛季前不需要点，S4可以升一点点
+
+2. **玉石加点**
+
+   **步兵 > 弓兵 > 骑兵**
+
+   - 与车头一致，优先步兵玉石（提供生命值），其次弓兵玉石（补充破坏力）
+   - 步兵与弓兵玉石阶差控制在3阶内（如步紫4阶，弓紫1阶），避免属性失衡
