--- a/7-ops/云服务器-6.部署Docker和Frp.md
+++ b/7-ops/云服务器-6.部署Docker和Frp.md
@@ -100,9 +100,13 @@ $ chmod -R 777 /usr/local/bin/docker-compose
 
 ## 安装Frp
 
+Frp 是一个快速的反向代理服务，可以把 NAT 或防火墙后面的本地服务暴露到公网上
+
 去 Github 上下载：[https://github.com/fatedier/frp/releases/](https://github.com/fatedier/frp/releases/)
 
 > [内网穿透 frp : 隐藏通信隧道技术](https://blog.csdn.net/zx77588023/article/details/122832101)
+>
+> [frp图解 附最新.toml配置文件](https://www.cnblogs.com/cenima/p/17849921.html)
 
 在服务器端进行解压，并给 frps 执行权限。客户端的文件就没用了，可以删除（最新版默认配置为 toml 后缀）
 
