--- a/10-other/三国冰河时代玩法.md
+++ b/10-other/三国冰河时代玩法.md
@@ -2,18 +2,21 @@
 
 提出以下存在的问题，浅析一下失败原因，并提供解决方案
 
-1. **在线人数**：红人阁在攻守城期间有专人（兔小妖妃丶）维护出勤表，但是这个显然不太适用于咱们盟，红人阁更年轻化一点空闲时间会更多一点，活跃度这个咱们没办法苛求。但中等活跃下也是有率先抢占的可能
-2. 采矿部队提前召回：提前6分钟以上召回（因为有人采的矿可能会非常远，单次召回就需要5分钟以上），这个是最容易犯错的问题，如果只有一个两个队列攻城，抢占失败率就非常大。我观察红人阁这边攻城情况，发现不少人也存在这个问题。守城的话就没必要全部召回
+1. **在线人数**：红人阁在攻守城期间有专人（兔小妖妃丶）维护出勤表，但是这个显然不太适用于咱们盟，红人阁更年轻化一点空闲时间会更多一点，活跃度这个咱们没办法苛求。但中等活跃下也是有率先抢占的可能！
+2. **采矿部队提前召回**：提前6分钟以上召回（因为有人采的矿可能会非常远，单次召回就需要5分钟以上），这个是最容易犯错的问题，如果只有一个两个队列攻城，抢占失败率就非常大。我观察红人阁这边攻城情况，发现不少人也存在这个问题。守城的话就没必要全部召回，但是如果实力比较接近，推荐还是拿6队守城
 3. **6队列**：4个赛季了，零氪玩家如果每天都签到且去同盟商店买爵位经验，无需花费元宝现在也爵位6了，多一个队列抢占概率就高一点，如果没有也不强求没必要浪费元宝升级，玩的开心最重要
-4. **加速**：红人阁有不少人在空城的情况下也使用加速，豪无人道，攻占的速度明显比我快很多。但是这个不适用于咱们盟，咱们盟大多数都是零氪微氪玩家，让其一个队列至少花500元宝去加速，我觉得是不太合适的。但是大佬玩家请不要吝啬，关键战开启您的加速，去加速一次回来加速一次，单个队列下来1000元宝。但是如果大佬在3环开外使用加速花费就很大，所以一定要把1环2个给最舍得用加速的人。不开加速的情况下，4环5环也就打一个来回 5-6滴血，2环不开加速可以打两个以上来回12-14滴血，如果使用加速，可以打20滴以上，1环能打的更多（手速也一定要快，要不然在1环2环可能也打不出来效果）4环5环使用加速会很浪费，且最多也只能打2个来回 10-12滴血（这个结论是在建立在和傲视抢3级城的基础上）。使用加速的话抢占概率会提升一点
-5. **网络**：抢占一般一分钟就结束了，这时候尽量保障网络是通畅的，切忌从流量切换到WIFI（比如正在回家的路上），切换网络是会有个网络异常问题导致无法攻城（这个小程序重连机制有很多Bug），这时候只能退出游戏重新登陆，那时候城可能就被攻占下来了
-6. 即使上面都做的很完美了，其实能抢下首占的概率还是不高，跟紫烟阁抢一级城失败那次就已经证明了咱们出勤率上就是偏低的。那有没有什么办法能让一些人没时间玩的人保障出勤率呢？这个是建立在牺牲某些人的前提上，且只需要关键战这样。因为这游戏是小程序，可以登录的方式就多种多样了，支付宝版本可以网页扫码登录（登录多个账号，开无痕模式开启多个Tab页即可），微信版本可以使用模拟器登录（无需登录微信），如果操作速度可以的话，可以一个人玩两个号，经我测试1环2环攻城期间玩两个号基本上不会有冲突（前提不使用加速），如果在4环5环可以玩更多。这样即使大佬忙无法在线也可以让小弟们顶上（红人关键战大佬有事的话就会找人帮忙顶上）。帮玩的前提是建立在信任关系的基础上，红人每天晚上在全民K歌上面一起嗨（里面已有52人），会加速建立彼此信任关系，所以即使有人退游也会时不时出来冒泡聊天，**关键战帮玩**一下
+4. **加速**：红人阁有不少人在空城的情况下也使用加速，豪无人道，攻占的速度明显比我快很多。但是这个不适用于咱们盟，咱们盟大多数都是零氪微氪玩家，让其一个队列至少花500元宝去加速，我觉得可能不太合适（如果在5环外，使用加速其实也没有什么意义，最多只能打一轮）。但是大佬玩家请不要吝啬，关键战开启您的加速，去加速一次回来加速一次，单个队列下来1000元宝。但是如果大佬在3环开外使用加速花费就很大，所以一定要把1环2个给最舍得用加速的人。不开加速的情况下，4环5环也就打一个来回 5-6滴血，2环不开加速可以打两个以上来回12-14滴血，如果使用加速，可以打20滴以上，1环能打的更多（手速也一定要快，要不然在1环2环可能也打不出来效果）4环5环使用加速会很浪费，且最多也只能打2个来回 10-12滴血（这个结论是在建立在和傲视抢3级城的基础上）。使用加速的话抢占概率会提升一点
+5. **抢黑土**：3级城以上会有黑土，如果黑土能抢到更多的位置首站的概率就会提升很多。需要注意下5级以上的城，这赛季5级以上的城北部和东部的第一块白土是三环，南部和西部的第一块白土是四环。车身优先抢北部和东部白土的位置，车头黑土有位置就得抢
+6. **网络**：抢占一般一分钟就结束了，这时候尽量保障网络是通畅的，切忌从流量切换到WIFI（比如正在回家的路上），切换网络是会有个网络异常问题导致无法攻城（这个小程序重连机制有很多Bug），这时候只能退出游戏重新登陆，那时候城可能就被攻占下来了
+7. **帮完**：即使上面都做的很完美了，其实能抢下首占的概率还是不高，跟紫烟阁抢一级城失败那次就已经证明了咱们出勤率上就是偏低的。那有没有什么办法能让一些人没时间玩的人保障出勤率呢？这个是建立在牺牲某些人的前提上，且只需要关键战这样。因为这游戏是小程序，可以登录的方式就多种多样了，支付宝版本可以网页扫码登录，微信版本可以使用腾讯应用宝、腾讯手游助手或手机模拟器登录（无需登录微信），如果操作速度可以的话，可以一个人玩两个号，经我测试1环2环攻城期间玩两个号基本上不会有冲突，如果在4环5环可以玩更多号。这样即使大佬忙无法在线也可以让小弟们顶上（红人关键战大佬有事的话就会找人帮忙顶上）。帮玩的前提是建立在信任关系的基础上，红人每天晚上在全民K歌上面一起嗨（里面已有58人），会加速建立彼此信任关系，所以即使有人退游也会时不时出来冒泡聊天，**关键战帮玩**一下
 
 乘物以游心，胜负得失皆外物，唯内心愉悦永恒~
 
 
 
 ## 神兵玉石
+
+车身玩家需最大化输出贡献，**弓兵为核心**，资源分配与车头相反
 
 ### 车头
 
@@ -45,3 +48,16 @@
 
    - 与车头一致，优先步兵玉石（提供生命值），其次弓兵玉石（补充破坏力）
    - 步兵与弓兵玉石阶差控制在3阶内（如步紫4阶，弓紫1阶），避免属性失衡
+
+|    **项目**    |       **车头玩家**        |        **车身玩家**         |   **通用规则**    |
+| :------------: | :-----------------------: | :-------------------------: | :---------------: |
+| **神兵优先级** | 步兵 > 弓兵（步高弓5阶）  |  弓兵 > 步兵（弓高步5阶）   |   骑兵始终最低    |
+| **玉石优先级** | 步兵 > 弓兵（阶差2-5阶）  |   步兵 > 弓兵（阶差≤2阶）   | 步兵玉石绝对优先  |
+|  **骑兵处理**  |      S4前蓝5阶/紫1阶      |       S4前蓝5阶/紫1阶       |  S1-S3骑兵资源≈0  |
+|  **核心目标**  | 生存扛伤（步兵防御/生命） | 输出最大化（弓兵攻击/破坏） | 步弓双C，骑兵躺平 |
+
+
+
+## 离别
+
+我是抢4城的时候从嘉世跳槽到的红人，很感谢红毛大佬给机会过来学习，在这边攻守城方面学到了很多，完全不一样的游戏体验，太爽了。以前20亿功勋都很难拿到， 即使全程没有宫2兵，竟然也拿满76亿功勋。感谢各位大佬们，尤其感谢明天见大佬，给您添了多次麻烦。等有机会咱们可以一起打打王者、在全民K歌嗨一下，我撤了回嘉世了
