docs: group by strategy

--- a/10-other/三国冰河时代玩法.md
+++ b/10-other/三国冰河时代玩法.md
@@ -58,6 +58,23 @@
 
 
 
+## 攻略
+
+1. 红装升级：优先步兵头甲，其次弓兵护腕鞋子，最后骑兵护腕鞋子（只要神兵不到位就不点）
+
+2. 太学院：
+
+   - 军事：步兵只点血量和防御，弓兵只点攻击和破坏，全阵容生效尽量点满，其余一点即可
+   - 内政：优先点满增加病床、学术研讨、治军严格、增设兵营
+
+3. 兵力配比其实和赛季有关系
+
+4. 集结时间点：0400、0810、1220、1630、2040、2450、2900、3310、3720、4130、4540、4950
+
+   大概每隔10秒提醒一下，外圈准备内圈准备
+
+
+
 ## 离别
 
 我是抢4城的时候从嘉世跳槽到的红人，很感谢红毛大佬给机会过来学习，在这边攻守城方面学到了很多，完全不一样的游戏体验，太爽了。以前20亿功勋都很难拿到， 即使全程没有宫2兵，竟然也拿满76亿功勋。感谢各位大佬们，尤其感谢明天见大佬，给您添了多次麻烦。等有机会咱们可以一起打打王者、在全民K歌嗨一下，我撤了回嘉世了
