--- a/10-other/61.三国冰河时代玩法.md
+++ b/10-other/61.三国冰河时代玩法.md
@@ -1,8 +1,8 @@
 # 三国冰河时代玩法
 
-## 抢首站问题
+## 梓潼抢首站失利分析
 
-提出以下存在的问题，浅析一下失败原因，并提供解决方案
+浅析一下失败原因，并提供解决方案
 
 1. **在线人数**：红人阁在攻守城期间有专人（兔小妖妃丶）维护出勤表，但是这个显然不太适用于咱们盟，红人阁更年轻化一点空闲时间会更多一点，活跃度这个咱们没办法苛求。但中等活跃下也是有率先抢占的可能！
 2. **采矿部队提前召回**：提前6分钟以上召回（因为有人采的矿可能会非常远，单次召回就需要5分钟以上），这个是最容易犯错的问题，如果只有一个两个队列攻城，抢占失败率就非常大。我观察红人阁这边攻城情况，发现不少人也存在这个问题。守城的话就没必要全部召回，但是如果实力比较接近，推荐还是拿6队守城
@@ -16,11 +16,11 @@
 
 
 
-## 神兵玉石
+## 神兵玉石玩法
 
 车身玩家需最大化输出贡献，**弓兵为核心**，资源分配与车头相反
 
-### 车头
+**车头：**
 
 1. **神兵加点**
 
@@ -35,7 +35,7 @@
    - 紫色12阶前：步兵玉石比弓兵高5阶（如步紫5阶，弓蓝5阶）
    - 紫色12阶后：步兵比弓兵高2-3阶即可，骑兵始终低于弓兵5阶
 
-### 车身
+**车身：**
 
 1. **神兵加点**
 
@@ -55,7 +55,6 @@
 | :------------: | :-----------------------: | :-------------------------: | :---------------: |
 | **神兵优先级** | 步兵 > 弓兵（步高弓5阶）  |  弓兵 > 步兵（弓高步5阶）   |   骑兵始终最低    |
 | **玉石优先级** | 步兵 > 弓兵（阶差2-5阶）  |   步兵 > 弓兵（阶差≤2阶）   | 步兵玉石绝对优先  |
-|  **骑兵处理**  |      S4前蓝5阶/紫1阶      |       S4前蓝5阶/紫1阶       |  S1-S3骑兵资源≈0  |
 |  **核心目标**  | 生存扛伤（步兵防御/生命） | 输出最大化（弓兵攻击/破坏） | 步弓双C，骑兵躺平 |
 
 
@@ -77,6 +76,23 @@
 
 
 
-## 离别
+## 茶谈
 
-我是抢4城的时候从嘉世跳槽到的红人，很感谢红毛大佬给机会过来学习，在这边攻守城方面学到了很多，完全不一样的游戏体验，太爽了。以前20亿功勋都很难拿到， 即使全程没有宫2兵，竟然也拿满76亿功勋。感谢各位大佬们，尤其感谢明天见大佬，给您添了多次麻烦。等有机会咱们可以一起打打王者、在全民K歌嗨一下，我撤了回嘉世了
+用手机玩三国冰河时代（支付宝、微信、抖音小程序）在攻守城人数很多的情况下会感觉很卡，但是使用电脑网页版玩就不会出现这个问题，浅析一下原理
+
+**通讯瓶颈**
+
+- **双线程模型**：小程序使用的是双线程模型（逻辑层与视图层分离架构），所有数据需通过 setData API 序列化传递。在攻城战中，频繁的位置同步会产生海量跨线程通信，序列化/反序列化过程消耗大量CPU资源，导致主线程阻塞
+- **单线程DOM操作**：网页版在浏览器单线程中直接操作DOM，无跨线程通信开销。网页版还可以利用 Web Worker 处理复杂计算，避免阻塞 UI 线程。所以在攻守城上不会有明显卡顿
+
+**网络传输途径**
+
+- **微信/支付宝网关过滤**：所有网络请求需经平台网关转发（增加 10-50ms 路由延迟），攻城战高峰期网关队列堆积，加剧延迟
+- **WebSocket直连服务器**：电脑网页版通过 WebSocket 直接连接游戏服务器，减少中间节点。支持**二进制协议**（如Protobuf），高效传输坐标
+
+**硬件资源利用**
+
+在 CPU、内存、GPU、散热等方面其实都有差距，这里主要说 GPU
+
+- 小程序：集成 GPU 渲染能力有限，万人同屏易掉帧
+- 网页版：独立 GPU（如GTX 5060）支持复杂渲染
