docs: 完善游戏攻略

--- a/10-other/61.三国冰河时代玩法.md
+++ b/10-other/61.三国冰河时代玩法.md
@@ -1,5 +1,40 @@
 # 三国冰河时代玩法
 
+## 攻城守城玩法
+
+加速道具：单次使用消耗 **500元宝**，减少 **25%** 行军时间
+
+- 减少 25% 行军时间，也就是乘以 0.75。所以如果要快速前进，出征后马上点效果最佳，减少时间最多。比如打官渡时，远程驻防或辎重车采集立马使用一个加速，加快驻防
+
+**攻城核心要点：紧跟攻城车**
+
+- 攻城的难度相对较高，单人往往难以突破敌方多人驻守的防线。此时，紧跟我方大佬的集结车（攻城车）就显得尤为重要
+- 一辆能够打破敌方防守的集结车，是团队攻城的核心力量。低战力玩家切勿随意开集结，以免无法破城，还浪费团队资源，导致盟里其他成员做无用功
+
+**攻城前夕准备**
+
+- 明确破城人员：需要提前确认我方有哪些玩家具备打破对面驻防的实力，让这些玩家担任车头开车，其他玩家则负责单人攻城或加入集结队伍
+- 车头沟通：开集结的大佬最好开车前一定要沟通好，方便统一指挥和协调时间。因为在卡秒过程中，准确的沟通能大大提高团队配合的效率
+
+**具体卡秒操作方法**
+
+- 计算自身到达时间：点击主城，选择 "出征"，在右下角能看到自己的部队到达目标城池的实时时间。通过对比自己的到达时间和大佬集结车的到达时间，来调整出征时机
+- 把握出征时机：由于游戏行进时间是整秒，为了确保跟在大佬集结车后面到达，需要在大佬出发后等待半秒左右再出发。例如大佬车达到时间是 20:08:01，单攻时间还是 20:08:01，但心里默念半秒左右的时间再点出发
+- 集结车时间间隔：考虑到敌方也可能会卡秒防守，为增加攻城的容错率，最好让集结车到达时间间隔 1-2 秒依次出发。例如发三趟车，到达时间分别是 20:08:01、20:08:03、20:08:05，即给了单兵出发时间，又能很好的打破敌方驻防部队
+
+**多队合一队**
+
+- 如果只有一个大车头能破城，那么就会采用 x 队卡 y 队的方法
+- 两队卡一队：00秒第一队，03秒第二队，等第一队剩余时间为9秒时马上点第二队加速，即可两队合一队
+- 四队卡一队：在00、03、05、09秒分别为第一二三四队，分别出征，在第一队剩余时间为27、15、9秒时分别点第四三二队加速，即可四队合一队。
+- 四队卡两队：在00、03、06、09分别为第一二三四队，分别出征，在第一队剩余时间22、14、9秒时分别点第四三二队加速，即可四队合两队，两队间隔一秒
+
+**网络延迟与跳秒现象**
+
+- 集结的时候，屏幕上明明显示 11:59、12:01，结果发车后一看，时间直接跳到了12:00、12:02。这个没有什么好的解决方案，车头时间不对，卡秒时间就要跟着改。或者车头直接取消集结，车头当车身上把车上满
+- 每晚 8-9 点高峰期必卡，攻城战直接变成运气游戏。进攻或者补防的时候，界面经常会有突然卡在 00:00:00，动都动不了。如果出现这个问题：将部队拆分为3波次进攻（间隔2秒），即使首波卡死，后续仍可加速补救。或者本地优化（降画质/清缓存）
+- 如果有一波破城数量或击溃数量与上一波差距比较大，需要把战报发出来，对比一下攻城实际时间与之前攻城时的到达时间，因为可能有网络延迟（通常0.5-2秒），根据这个及时调整卡秒时间非常重要
+
 ## 梓潼抢首站失利分析
 
 浅析一下失败原因，并提供解决方案
@@ -59,24 +94,46 @@
 
 
 
-## 攻略
+## 其他攻略
 
-1. 红装升级：优先步兵头甲，其次弓兵护腕鞋子，最后骑兵护腕鞋子（只要神兵不到位就不点）
+1. 红装升级：通用的是优先步兵头甲，其次弓兵护腕鞋子，最后骑兵护腕鞋子（只要神兵不到位就不点）
 
-2. 太学院：
+   也可以按照车头和车身来点
+
+   - **步兵（车头）**：头盔、衣服 → 100级（生命/防御）
+   - **弓兵（车身）**：护臂、鞋子 → 100级（破坏力/攻击力）
+   - **骑兵**：护臂、鞋子 → 75级，再补防御装
+
+2. 太学院科技：
 
    - 军事：步兵只点血量和防御，弓兵只点攻击和破坏，全阵容生效尽量点满，其余一点即可
+
+     **步兵**：生命力/防御力 > 破坏力
+
+     **弓兵**：破坏力/攻击力 > 生存属性
+
    - 内政：优先点满增加病床、学术研讨、治军严格、增设兵营
 
-3. 兵力配比其实和赛季有关系
+3. 马皮升级策略
 
-4. 集结时间点：0400、0810、1220、1630、2040、2450、2900、3310、3720、4130、4540、4950
+   平民：每匹马喂至41级（消耗94万饲料，性价比最高），剩余全部堆自己主阵容的马
 
-   大概每隔10秒提醒一下，外圈准备内圈准备
+   马具与星级：提升全阵营属性，建议平均升级（资源消耗均衡）。但尽量要让一匹马战力先达到420w
+
+   也可以按照车头和车身来点
+
+   - 车头​​：优先升级络头（防御）、披甲（生命），增强生存
+   - 车身：优先升级马鞍（攻击）、马镫（破坏力），强化输出
+
+4. 冲车、霹雳车、城墙我之前打算写这方面的攻略，但是 S4 马上结束了，也没有天工策了，不打算写了
+
+5. 注意点：取消升级建筑不返还汉白玉、取消升级角逐不返还六韬图
+
+6. ...有时间再慢慢补充
 
 
 
-## 茶谈
+## 游戏茶谈
 
 用手机玩三国冰河时代（支付宝、微信、抖音小程序）在攻守城人数很多的情况下会感觉很卡，但是使用电脑网页版玩就不会出现这个问题，浅析一下原理
 
