--- a/7-ops/监控-1.Prometheus.md
+++ b/7-ops/监控-1.Prometheus.md
@@ -1,8 +1,10 @@
 # Prometheus
 
-## 企业级运维监控理论基础
+## 前言
 
-### 基础概念
+### 企业级运维监控理论基础
+
+#### 基础概念
 
 ![img](https://gitee.com/lilyn/pic/raw/master/md-img/f9daef7e091250514f7be63059275d3c.png)
 
@@ -37,7 +39,7 @@ Prometheus 相比其他老款监控的优势与不足
 - 学习成本太大，尤其是其独有的数学命令行，本身的各种数学模型的概念很复杂
 - 对磁盘资源也是耗费的较大，这个具体要看监控的集群量和监控项的多少和保存时间的长短
 
-### 监控系统体系
+#### 监控系统体系
 
 ![image-20250819101706249](https://gitee.com/lilyn/pic/raw/master/md-img/image-20250819101706249.png)
 
@@ -121,7 +123,7 @@ Prometheus 相比其他老款监控的优势与不足
 
 监控的设计搭建需要大量的技术知识，但是对于一个观架者来说，往往不需要多少技术，只要能看懂图就好（例如 老板想看看当前用户访问量状况，想看看整体CPU高不高等等）
 
-## 企业监控通用技术
+### 企业监控通用技术
 
 早期企业无监控
 
@@ -166,7 +168,9 @@ Prometheus 相比其他老款监控的优势与不足
 
 最终理想的未来报警系统，可以把所有无关的报警全部忽略掉，以链路的方式对问题一查到底，把最终引起问题的地方报警出来，让运维和开发即时做出响应和处理
 
-## Prometheus监控入门
+## Prometheus入门
+
+### Prometheus监控入门
 
 > [https://prometheus.io/docs/introduction/overview/](https://prometheus.io/docs/introduction/overview/)
 
@@ -204,7 +208,7 @@ Prometheus 对于运维的要求：
 - 对数学思维有一定的要求，因为它基本的内核就是数学公式组成
 - 对监控的经验有很高的要求，很多时候监控项需要很细的定制
 
-## Prometheus运行框架
+### Prometheus运行框架
 
 ![Prometheus architecture](https://gitee.com/lilyn/pic/raw/master/md-img/architecture.svg)
 
@@ -242,7 +246,7 @@ Prometheus 的客户端主要有两种方式采集
 
 - prometheus 本身不具备告警功能，只能通过第三方开源或商业软件实现报警
 
-## Promethues 监控数据格式
+### Promethues 监控数据格式
 
 Promethues 监控中，对于采集过来的数据，统一称为 metrics 数据。metrics 是一种对采样数据的总称
 
@@ -269,3 +273,96 @@ metrics 几种主要类型：
   比如：http_response_time HTTP 响应时间，代表的是一次用户 HTTP 请求，在系统传输和执行过程中，总共花费的时间。我们想监控用户的访问时间
 
   如果我们想通过监控的方式，抓取当天的 nginx_access_log，并且想监控用户的访问时间
+  
+  - 把日志每行的 http_response_time 数值统统采集下来，然后计算一下平均值。比如今天访问量是 100万次，然后把 100万次 http_response_time 全部加一起，然后除以 100万，最后得出一个值，那这个数据有意义大吗
+  - 例如，今天中午 1:00 时候，发生了一次线上故障，系统整体的访问变得非常缓慢，大部分用户请求时间都达到了 0.5~1 秒作用，但是这一段时间只持续了 5 分钟，总的一天平均值并不能表现得出来
+  
+  所以 Histograms 的 metrics 类型，就派上用场了，通过 histogram 类型可以分别统计出，全部用户的响应时间中，~=0.0.5秒量有多少，>2秒的有多少，>10秒的有多少
+
+K/V 的数据形式：
+
+- 当一个 node_exporter 被安装和运行在监控的服务器上后，使用简单的 curl 命令，就可以看到 exporter 帮我们采集到 metrics 数据的样式，以 K/V 形式展示
+
+```bash
+process_max_fds 65535
+process_open_fds 10
+```
+
+pushgateway 介绍：
+
+exporter 是首先安装在被监控服务器上，运行在后台，然后自动采集系统数据，本身又是一个 http_server 可以被 prometheus 定时去 HTTP GET 获取数据，属于 pull 形式
+
+push 的形式是把 pushgateway 安装在客户端或服务端，pushgateway 本身也是一个 http 服务器
+
+为什么已经有了那么强大的 pull 形式的 node_exporter 采集，还需要一个 pushgateway 的形式呢？
+
+- exporter 虽然采集类型已经很丰富了，但是我们依然需要很多自制的监控数据，非规则化、自定制的
+- exporter 由于数据类型采集量大，其实很多数据或者大部分数据，其实我们监控中真的用不到，用 pushgateway 定义一项数据，就采集着一种，节省资源
+- 一个新的自定义的 pushgateway 脚本开发，远远比开发一个全新的 exporter 简单快速的多的多的多
+- exporter 虽然已经很丰富了，但是依然有很多我们需要的采集形式，exporter 无法提供，或者说现有的 exporter 还不支持，但是如果使用 pushgateway 的形式，就可以任意灵活，想做什么都可以做到，而且非常快速
+
+### Prometheus 初探和配置
+
+安装 Prometheus 之前，必须先安装 ntp 时间同步（T_S 对系统时间的准确性要求很高，必须保证本机时间同步）
+
+1. Prometheus 下载
+
+   [https://prometheus.io/download/](https://prometheus.io/download/)
+
+2. Prometheus 安装
+
+   ```bash
+   tar -zxvf prometheus-x.x.x.linux-amd64.tar.gz
+   cp -rf prometheus-x.x.x.linux-amd64 /usr/local/prometheus
+   ```
+
+3. Prometheus 启动和后台运行
+
+   ```bash
+   ./prometheus
+   ```
+
+   默认运行在 9090，就蓝旗可以直接打开访问，无账号密码验证（如果希望加上验证，可以使用类似 apache httppass 方式添加）
+
+4. Prometheus 主配置文件
+
+   ```bash
+   ./prometheus --config.file=prometheus.yml
+   
+   global:
+     scrape_interval: 15s
+     evaluation_interval: 15s
+   ```
+
+   - scrape_interval：抓取采样数据的时间间隔，默认每15秒去被监控机采样一次
+   - evaluation_interval：监控数据规则的评估频率
+
+   Alertmanaeger 是 prometheus 的一个用于管理和发出报警的插件（4.0 版本的 Grafana 本身就已经支持报警发出功能了）
+
+   ```bash
+   # Here it's Prometheus itself.
+   scrape_configs:
+     - job_name: "prometheus"
+       static_configs:
+         - targets: ["localhost:9090"]
+           labels:
+             app: "prometheus"
+   ```
+
+   - targets 的设定，默认带了一个 prometheus 本机的
+
+[node_exporter](https://github.com/prometheus/node_exporter)
+
+```bash
+./node_exporter 
+```
+
+CPU 使用时间，还会分成几个重要的状态类型：
+
+- 比如：CPU time 分成 CPU user time / sys time / nice time / idle time / irq / 等等...
+
+CPU 使用率 = (所有非空闲的CPU使用时间综合) / (所有状态CPU时间的总和)
+
+increase 函数在 prometheus 中，是用来针对 Counter 这种持续增长的数值，截取其中一段时间的增量
+
+sum 起到 value 加合的作用
