--- a/7-ops/监控-1.Prometheus.md
+++ b/7-ops/监控-1.Prometheus.md
@@ -397,3 +397,23 @@ prometheus命令行格式：
 ## Grafana
 
 Grafana 是一款近几年新兴的开源数据绘图工具平台
+
+Prometheus 擅长发现异常，而 PagerDuty 擅长处理异常。具体来说，当 Prometheus 检测到指标异常（如服务器宕机）时，它可以通过 Alertmanager 将告警转发给 PagerDuty。PagerDuty 则负责升级处理——根据预设规则通知值班人员（电话/短信/邮件），跟踪事件状态，直到问题解决
+
+**Grafana 与 PagerDuty 的分工对比**
+
+| 功能         | Grafana                    | PagerDuty                        |
+| :----------- | :------------------------- | :------------------------------- |
+| 数据可视化   | ✅ 丰富图表展示监控指标     | ❌ 不直接展示数据                 |
+| 基础告警触发 | ✅ 基于阈值规则生成告警事件 | ❌ 依赖外部输入告警               |
+| 通知路由     | ❌ 仅基础推送（邮件/Slack） | ✅ 多级通知、值班调度、电话强提醒 |
+| 事件闭环管理 | ❌ 无状态跟踪               | ✅ 全生命周期记录（触发→解决）    |
+| 智能降噪     | ❌ 需手动配置               | ✅ 机器学习降噪+根因建议          |
+| 跨团队协作   | ❌ 有限                     | ✅ 多角色协同与自动化路由         |
+
+**CPU密集型 与 IO密集型**
+
+| 类型      | 核心瓶颈                       | 资源消耗特点                        | 任务本质                   |
+| :-------- | :----------------------------- | :---------------------------------- | :------------------------- |
+| CPU密集型 | CPU计算能力（如算力不足）      | CPU利用率高（常达90%~100%）         | 计算为主，极少等待外部操作 |
+| IO密集型  | I/O设备速度（如磁盘/网络延迟） | CPU利用率低（常<30%），大量等待时间 | 等待为主，少量计算         |
